<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/rename_list"
        android:icon="@drawable/rename"
        android:showAsAction="always"
        android:title="@string/rename"/>
    <item
        android:id="@+id/merge_list"
        android:icon="@drawable/content_merge"
        android:showAsAction="always"
        android:title="@string/merge"/>
    <item
        android:id="@+id/share_list"
        android:icon="@drawable/social_share"
        android:showAsAction="always"
        android:title="@string/share"/>
    <item
        android:id="@+id/delete_list"
        android:icon="@drawable/content_discard"
        android:showAsAction="always"
        android:title="@string/delete"/>

</menu>